--- a/outside-hacks/Base.lproj/Main.storyboard
+++ b/outside-hacks/Base.lproj/Main.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="YUV-BH-uAM">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YUV-BH-uAM" secondAttribute="trailing" id="6mb-6v-ygA"/>
+                            <constraint firstItem="YUV-BH-uAM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NP2-74-CYf"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YUV-BH-uAM" secondAttribute="bottom" id="NZu-dg-23R"/>
+                            <constraint firstItem="YUV-BH-uAM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gFo-LP-hKQ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
