--- a/outside-hacks/Base.lproj/Main.storyboard
+++ b/outside-hacks/Base.lproj/Main.storyboard
@@ -72,28 +72,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="vBl-Ki-akz">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="88"/>
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meet" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hse-IZ-ReS">
-                                    <rect key="frame" x="28" y="31" width="55.5" height="26.5"/>
-                                    <fontDescription key="fontDescription" name="SusaBold" family="SusaBold" pointSize="24"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mesh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hse-IZ-ReS">
+                                    <rect key="frame" x="10" y="10" width="104.5" height="44"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="104.5" id="FgI-p3-uwM"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="SusaBold" family="SusaBold" pointSize="40"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Friends Found" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7D-RH-VjM">
-                                    <rect key="frame" x="274" y="33.5" width="162" height="21"/>
-                                    <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="21"/>
+                                    <rect key="frame" x="372" y="19.5" width="185" height="24"/>
+                                    <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="24"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAT-cK-wyE">
-                                    <rect key="frame" x="513" y="20.5" width="33" height="47"/>
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAT-cK-wyE">
+                                    <rect key="frame" x="568" y="27" width="10" height="10"/>
                                     <color key="backgroundColor" red="0.21067416667938232" green="0.92213642597198486" blue="0.23415806889533997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="47" id="5zb-uX-e0g"/>
-                                        <constraint firstAttribute="width" constant="33" id="SeN-6J-Rwy"/>
+                                        <constraint firstAttribute="height" constant="10" id="5zb-uX-e0g"/>
+                                        <constraint firstAttribute="width" constant="10" id="SeN-6J-Rwy"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
                             <color key="backgroundColor" red="0.49687498807907104" green="0.7851409912109375" blue="0.50724333524703979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -101,14 +109,14 @@
                                 <constraint firstItem="hse-IZ-ReS" firstAttribute="centerY" secondItem="vBl-Ki-akz" secondAttribute="centerY" id="1L7-Ae-thf"/>
                                 <constraint firstItem="cAT-cK-wyE" firstAttribute="centerY" secondItem="E7D-RH-VjM" secondAttribute="centerY" id="3Yd-ry-zEk"/>
                                 <constraint firstItem="hse-IZ-ReS" firstAttribute="centerY" secondItem="E7D-RH-VjM" secondAttribute="centerY" id="Kwb-qi-rJ8"/>
-                                <constraint firstItem="cAT-cK-wyE" firstAttribute="leading" secondItem="E7D-RH-VjM" secondAttribute="trailing" constant="77" id="PNF-yu-h0i"/>
-                                <constraint firstAttribute="trailing" secondItem="cAT-cK-wyE" secondAttribute="trailing" constant="54" id="V62-in-XLs"/>
-                                <constraint firstItem="hse-IZ-ReS" firstAttribute="leading" secondItem="vBl-Ki-akz" secondAttribute="leading" constant="28" id="jwN-TY-JDA"/>
+                                <constraint firstItem="cAT-cK-wyE" firstAttribute="leading" secondItem="E7D-RH-VjM" secondAttribute="trailing" constant="11" id="PNF-yu-h0i"/>
+                                <constraint firstAttribute="trailing" secondItem="cAT-cK-wyE" secondAttribute="trailing" constant="22" id="V62-in-XLs"/>
+                                <constraint firstItem="hse-IZ-ReS" firstAttribute="leading" secondItem="vBl-Ki-akz" secondAttribute="leading" constant="10" id="jwN-TY-JDA"/>
                             </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" id="SO8-y6-zFU">
-                                <rect key="frame" x="0.0" y="110" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SO8-y6-zFU" id="ImJ-QK-PIY">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -116,6 +124,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="Chd-wb-idL" id="ruA-9e-46w"/>
                             <outlet property="delegate" destination="Chd-wb-idL" id="Tbv-u8-aSj"/>
